# elm-street-compilation-benchmark

./: README.md  dump-timings.hs  elm-street-compilation-benchmark.cabal  gen-modules.hs  hie.yaml  stack.yaml
src/: Record01.hs  Record02.hs  Record04.hs  Record08.hs  Record1.hs  Record16.hs  Record2.hs  Record32.hs  Record4.hs  Record8.hs
src/Record/: Fifty.hs  One.hs  Ten.hs
src/Simple/: Fifty.hs  One.hs  Ten.hs
