cabal-version:      3.0
name:               elm-street-compilation-benchmark
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Author name here
maintainer:         example@example.com
author:             Author name here
homepage:
    https://github.com/jhrcek/elm-street-compilation-benchmark#readme

bug-reports:
    https://github.com/jhrcek/elm-street-compilation-benchmark/issues

description:
    Please see the README on GitHub at <https://github.com/jhrcek/elm-street-compilation-benchmark#readme>

build-type:         Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/jhrcek/elm-street-compilation-benchmark

library
    ghc-options: -Wall
    exposed-modules:
        Record01
        Record02
        Record04
        Record08
        Record16
        Record32

    hs-source-dirs:   src
    other-modules:    Paths_elm_street_compilation_benchmark
    default-language: Haskell2010
    build-depends:
        base,
        aeson,
        elm-street
